# Evolutionary-EMG-Classification

./: README.md  pyproject.toml
configs/: neat_emg_config.ini  neat_emg_config_2.ini
current_code/: 251120_EMG_Evolution_main.ipynb  fig_gen0_random  fig_neat_winner
emg_evo_lib_kb/: __init__.py  preprocessing.py
src/emg_evo_lib_kb/: __init__.py  control_nn.py  neat_emg.py  preprocessing.py
src/emg_evo_lib_kb.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
